--- a/project.config
+++ b/project.config
@@ -2,3 +2,9 @@
 	inheritFrom = domain-base
 [project]
 	state = active
+	description = "Domain: Base;"\n\
+"Maintainers: Myungjoo Ham,William Douglas;"\n\
+"Integrators: Piotr Bereza;"\n\
+"Reviewers: Walyong Cho;"\n\
+"Licenses: GPL-3.0+,FSF,See-doc(OTHER);"\n\
+
