Project settings updated

--- a/project.config
+++ b/project.config
@@ -1,9 +1,4 @@
 [access]
 	inheritFrom = scm/acls/domain_system/uncategorized
 [project]
-	description = "Domain: Base;"\n\
-"Maintainers: Myungjoo Ham,William Douglas;"\n\
-"Integrators: Piotr Bereza;"\n\
-"Reviewers: Walyong Cho;"\n\
-"Licenses: GPL-3.0+,FSF,See-doc(OTHER);"\n\
-
+	description = "Domain: System / Uncategorized;"
